--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -3,7 +3,6 @@
 
   &__list {
     display: flex;
-    gap: 10px ;
     padding: 0;
     margin: 0;
     list-style: none;
@@ -12,7 +11,14 @@
   &__item {}
 
   &__link {
-    color: #000;
+    color: #001E00;
     text-decoration: none;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 10px 3px 10px 10px;
+
+    &:first-child {
+      padding-left: 10px;
+    }
   }
 }
