--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,8 +1,9 @@
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
   color: #001e00;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: normal;
 }
 
 .app {
