--- a/src/components/LoginMenu/LoginMenu.scss
+++ b/src/components/LoginMenu/LoginMenu.scss
@@ -25,7 +25,7 @@
     border-radius: 20px;
     
     &:hover {
-      background-color: rgb(20, 138, 0);
+      background-color: #14a803;
     }
   }
 }
