--- a/src/components/LoginMenu/LoginMenu.scss
+++ b/src/components/LoginMenu/LoginMenu.scss
@@ -23,6 +23,7 @@
     color: #fff;
     height: 40px;
     border-radius: 20px;
+    transition: background-color 200ms;
     
     &:hover {
       background-color: #14a803;
