working on header

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -4,6 +4,7 @@ body {
   color: #001e00;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: normal;
+  font-size: 14px;
 }
 
 .app {
