--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -18,9 +18,14 @@
     width: 237px;
     border: 0;
 
+    &:hover {
+      background-color: #f5f7f5;
+    }
+
     &:focus {
       outline: none;
       border: 2px solid gray;
+      background-color: #fff;
     }
   }
 }
