header almost done

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   color: #001e00;
+  letter-spacing: 0.4px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: normal;
   font-size: 14px;
