--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -1,31 +1,152 @@
 .searchbar {
+  position: relative;
   box-sizing: border-box;
   display: flex;
+  align-items: center;
   width: 330px;
   height: 40px;
-  border: 2px solid #e4ebe4;
+  border: 1.6px solid #e4ebe4;
   border-radius: 10rem;
 
   &:hover {
     background-color: #e4ebe4;
   }
+
+  &__label {}
   
   &__input {
-    box-sizing: border-box;
     display: flex;
+    box-sizing: border-box;
+    width: 237px;
+    height: 36px;
+    padding: 0 35px;
     border-radius: 10rem;
     letter-spacing: 0.4px;
-    width: 237px;
-    border: 0;
+    font-weight: 600;
+    border: 2px solid transparent;
+    transition: border-color 200ms;
 
     &:hover {
       background-color: #f5f7f5;
     }
 
     &:focus {
+      height: 40px;
       outline: none;
       border: 2px solid gray;
       background-color: #fff;
+    }
+
+    &::placeholder {
+      color: #001e00;
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    left: 13px;
+    z-index: 1;
+
+    width: 16px;
+    height: 16px;
+    background-image: url('../../img/search.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  &__dropdown {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    box-sizing: border-box;
+    border-radius: 10rem;
+    height: 36px;
+    width: 90px;
+    text-align: center;
+    line-height: 36px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #f5f7f5;
+    }
+
+    &--active {
+      border: 2px solid gray;
+      height: 40px;
+    }
+
+    &-options {
+      position: absolute;
+      top: 47px;
+      right: -120px;
+      z-index: 1;
+      // width: 224px;
+      padding: 7px 0;
+      background-color: #ffffff;
+      border-radius: 5px;
+      box-shadow: rgba(0, 30,0, 0.15) 0 0 10px 2px;
+
+      &--open {
+        display: block;
+      }
+    }
+  }
+
+  &__arrow {
+    width: 12px;
+    height: 12px;
+    background-image: url(../../img/arrow-up.svg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: rotate(180deg);
+    cursor: pointer;
+  }
+
+  &__link {
+    
+    &-container {
+      display: flex;
+      flex-direction: row;
+      padding: 6px 15px;
+    }
+
+    &-icon {
+      margin: 4px 8px;
+      width: 20px;
+      height: 20px;
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+      
+      &--Talent {
+        background-image: url('../../img/dropdown-people.svg');
+      }
+
+      &--Projects {
+        background-image: url('../../img/dropdown-projects.svg');
+      }
+
+      &--Jobs {
+        margin-top: 0;
+        width: 24px;
+        height: 24px;
+        background-image: url('../../img/dropdown-jobs.svg');
+      }
+    }
+
+    &-title {
+      height: 20px;
+      line-height: 20px;
+    }
+    
+    &-text {
+      font-size: 12px;
+      height: 20px;
+      line-height: 20px;
+      color: #5e6d55;
     }
   }
 }
