--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -15,4 +15,12 @@ body {
     right: 0;
     top: 0;
   }
+
+  &__main {
+    padding: 0 64px;
+  }
+
+  &__rebrandhero {
+    margin: 41px 0 80px;
+  }
 }
