--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -111,6 +111,11 @@
       display: flex;
       flex-direction: row;
       padding: 6px 15px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #f5f7f5;
+      }
     }
 
     &-icon {
