--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,7 +3,7 @@ body {
   margin: 0;
   color: #001e00;
   letter-spacing: 0.4px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
   font-weight: normal;
   font-size: 14px;
 }
@@ -16,11 +16,28 @@ body {
     top: 0;
   }
 
+  &__subnav {
+    position: sticky;
+    top: 64px;
+  }
+
   &__main {
+    box-sizing: border-box;
+    margin: 0 auto;
     padding: 0 64px;
+    max-width: 1600px;
+    height: 200vh;
   }
 
   &__rebrandhero {
     margin: 41px 0 80px;
+  }
+
+  &__howtohire {
+    margin: 0 0 64px;
+  }
+
+  &__category {
+    margin: 0 0 80px;
   }
 }
