--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 330px;
   height: 40px;
-  border: 1.6px solid #e4ebe4;
+  border: 2px solid #e4ebe4;
   border-radius: 10rem;
 
   &:hover {
@@ -45,7 +45,6 @@
   &__icon {
     position: absolute;
     left: 13px;
-    z-index: 1;
 
     width: 16px;
     height: 16px;
@@ -53,6 +52,14 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  &__divider {
+    position: absolute;
+    left: 236px;
+    width: 1px;
+    height: 18px;
+    border-left: 1px solid #ccd4c7;
   }
 
   &__dropdown {
@@ -78,11 +85,11 @@
     }
 
     &-options {
+      display: none;
       position: absolute;
+      z-index: 10000000000;
       top: 47px;
       right: -120px;
-      z-index: 1;
-      // width: 224px;
       padding: 7px 0;
       background-color: #ffffff;
       border-radius: 5px;
