--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -39,6 +39,10 @@ body {
     margin: 0 0 64px;
   }
 
+  &__whyupwork {
+    margin-top: 100px;
+  }
+
   &__category {
     margin: 0 0 80px;
   }
