working on sections

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -87,7 +87,7 @@
     &-options {
       display: none;
       position: absolute;
-      z-index: 10000000000;
+      z-index: 3;
       top: 47px;
       right: -120px;
       padding: 7px 0;
