--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -14,6 +14,7 @@ body {
 
   &__header {
     position: sticky;
+    z-index: 1;
     left: 0;
     right: 0;
     top: 0;
@@ -21,6 +22,7 @@ body {
 
   &__subnav {
     position: sticky;
+    z-index: 1;
     top: 64px;
   }
 
