working on sections

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -45,14 +45,14 @@ body {
   }
 
   &__whyupwork {
-    margin-top: 100px;
+    margin: 100px 0 0 0;
   }
 
   &__category {
     margin: 0 0 80px;
   }
 
-  &__testimonials{
+  &__testimonials {
     margin: 85px 122px 0;
   }
 
