working on sections

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -44,12 +44,16 @@ body {
     margin: 0 0 64px;
   }
 
+  &__category {
+    margin: 0 0 80px;
+  }
+
   &__whyupwork {
     margin: 100px 0 0 0;
   }
 
-  &__category {
-    margin: 0 0 80px;
+  &__fortalent {
+    
   }
 
   &__testimonials {
