--- a/src/components/WhyUpwork/WhyUpwork.scss
+++ b/src/components/WhyUpwork/WhyUpwork.scss
@@ -1,9 +1,10 @@
 .whyupwork {
+  box-sizing: border-box;
   position: relative;
   display: flex;
   padding: 0 64px;
   height: 634px;
-  width: 1280px;
+  width: 1408px;
   
   &__image {
     position: absolute;
