--- a/src/components/Enterprise/Enterprise.scss
+++ b/src/components/Enterprise/Enterprise.scss
@@ -1,3 +1,72 @@
 .enterprise {
-  
+  box-sizing: border-box;
+  padding: 0 64px;
+  width: 1408px;
+  height: 510px;
+  color: #fff;
+
+  &__content {
+    box-sizing: border-box;
+    width: 1280px;
+    height: 100%;
+    padding: 35px 45px 35px 35px;
+    border-radius: 8px;
+    background-color: #13544e;
+  }
+
+  &__headline {
+    margin-bottom: 35px;
+    font-size: 22px;
+    line-height: 28.6px;
+    letter-spacing: 0.6px;
+  }
+
+  &__title {
+    margin: 0 0 20px;
+    font-size: 56px;
+    line-height: 56px;
+    letter-spacing: -1.96px;
+    font-family: 'Times New Roman', Times, serif;
+
+    &--green {
+      color: #91e6b3;
+    }
+  }
+
+  &__subtitle {
+    font-size: 18px;
+    line-height: 19px;
+    letter-spacing: 0.6px;
+  }
+
+  &__text {
+    font-size: 18px;
+    line-height: 19.8px;
+    letter-spacing: 0.6px;
+
+    &--mt16 {
+      margin-top: 16px;
+    }
+
+    &--mt12 {
+      margin-top: 12px;
+    }
+  }
+
+  &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 28px;
+    width: 133px;
+    height: 40px;
+    line-height: 28.6px;
+    font-size: 16px;
+    letter-spacing: 0.6px;
+    font-weight: 600;
+    background-color: #fff;
+    color: #13544e;
+    border-radius: 20px;
+    cursor: pointer;
+  }
 }
