--- a/src/components/UkraineBanner/UkraineBanner.scss
+++ b/src/components/UkraineBanner/UkraineBanner.scss
@@ -1,11 +1,20 @@
 .ukraine {
   box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
+  width: 1408px;
+  padding: 0 64px;
   height: 211px;
-  padding: 32px;
-  background-color: rgb(242, 245, 242);
-  border-radius: 20px;
+
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 32px;
+    height: 211px;
+    background-color: rgb(242, 245, 242);
+    border-radius: 20px;
+  }
 
   &__details {
     display: flex;
