--- a/src/components/ForTalent/ForTalent.scss
+++ b/src/components/ForTalent/ForTalent.scss
@@ -1,8 +1,8 @@
 .fortalent {
   display: flex;
   box-sizing: border-box;
-  padding: 50px 64px 0;
-  width: 1408px;
+  padding: 50px 0;
+  width: 1280px;
   height: 730px;
   color: #fff;
 
