--- a/src/components/ForTalent/ForTalent.scss
+++ b/src/components/ForTalent/ForTalent.scss
@@ -1,7 +1,7 @@
 .fortalent {
   display: flex;
   box-sizing: border-box;
-  padding: 50px 0;
+  padding: 50px 0 0;
   width: 1280px;
   height: 730px;
   color: #fff;
