--- a/src/components/Deliver/Deliver.scss
+++ b/src/components/Deliver/Deliver.scss
@@ -7,9 +7,32 @@
   background-color: rgb(59, 63, 41);
   border-radius: 8px;
 
+  &__headline {
+    margin-bottom: 100px;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.048px;
+  }
+
+  &__title {
+    margin: 0 0 30px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 72px;
+    line-height: 72px;
+    letter-spacing: -2.16px;
+  }
+
+  &__subtitle {
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0.6px;
+  }
+
   &__cards {
     display: flex;
     gap: 32px;
+    padding-top: 10px;
   }
 
   &__card {
