--- a/src/components/ForTalent/ForTalent.scss
+++ b/src/components/ForTalent/ForTalent.scss
@@ -9,7 +9,7 @@
   &__image {
     width: 640px;
     height: 100%;
-    background-image: url('../../img/studio-image.jpg');
+    background-image: url('../../img/images/studio-image.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
