--- a/src/components/Subnav/Subnav.scss
+++ b/src/components/Subnav/Subnav.scss
@@ -37,7 +37,7 @@
   &__arrow {
     width: 12px;
     height: 12px;
-    background-image: url(../../img/arrow-up.svg);
+    background-image: url('../../img/icons/arrow-up.svg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
