--- a/src/components/UkraineBanner/UkraineBanner.scss
+++ b/src/components/UkraineBanner/UkraineBanner.scss
@@ -22,7 +22,7 @@
   &__image {
     width: 212px;
     height: 147px;
-    background-image: url('../../img/ukraine-help.svg');
+    background-image: url('../../img/icons/ukraine-help.svg');
     background-repeat: no-repeat;
   }
 
