--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -107,31 +107,31 @@
     }
 
     &--fb {
-      background-image: url('../../img/fb-icon.svg');
+      background-image: url('../../img/icons/fb-icon.svg');
     }
 
     &--in {
-      background-image: url('../../img/fb-icon.svg');
+      background-image: url('../../img/icons/fb-icon.svg');
     }
 
     &--twt {
-      background-image: url('../../img/twt-logo.svg');
+      background-image: url('../../img/icons/twt-logo.svg');
     }
 
     &--yt {
-      background-image: url('../../img/yt-logo.svg');
+      background-image: url('../../img/icons/yt-logo.svg');
     }
 
     &--ig {
-      background-image: url('../../img/ig-logo.svg');
+      background-image: url('../../img/icons/ig-logo.svg');
     }
 
     &--apple {
-      background-image: url('../../img/apple-icon.svg');
+      background-image: url('../../img/icons/apple-icon.svg');
     }
 
     &--android {
-      background-image: url('../../img/android-icon.svg');
+      background-image: url('../../img/icons/android-icon.svg');
     }
   }
 
