--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,7 +12,7 @@
     display: flex;
     height: 22.5px;
     width: 82px;
-    background-image: url('../../img/header-logo.svg');
+    background-image: url('../../img/icons/header-logo.svg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
