--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -48,7 +48,7 @@
 
     width: 16px;
     height: 16px;
-    background-image: url('../../img/search.svg');
+    background-image: url('../../img/icons/search.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,7 +104,7 @@
   &__arrow {
     width: 12px;
     height: 12px;
-    background-image: url(../../img/arrow-up.svg);
+    background-image: url('../../img/icons/arrow-up.svg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -134,18 +134,18 @@
       background-repeat: no-repeat;
       
       &--Talent {
-        background-image: url('../../img/dropdown-people.svg');
+        background-image: url('../../img/icons/dropdown-people.svg');
       }
 
       &--Projects {
-        background-image: url('../../img/dropdown-projects.svg');
+        background-image: url('../../img/icons/dropdown-projects.svg');
       }
 
       &--Jobs {
         margin-top: 0;
         width: 24px;
         height: 24px;
-        background-image: url('../../img/dropdown-jobs.svg');
+        background-image: url('../../img/icons/dropdown-jobs.svg');
       }
     }
 
