--- a/src/components/MenuSections/Category/Category.scss
+++ b/src/components/MenuSections/Category/Category.scss
@@ -73,7 +73,7 @@
     width: 18px;
     height: 18px;
     margin-right: 4px;
-    background-image: url('../../img/icons/star-green.svg');
+    background-image: url('../../../img/icons/star-green.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
