--- a/src/components/MenuSections/Testimonials/Testimonials.scss
+++ b/src/components/MenuSections/Testimonials/Testimonials.scss
@@ -46,11 +46,11 @@
     background-size: contain;
 
     &--nasdaq {
-      background-image: url('../../img/icons/nasdaq-light.svg');
+      background-image: url('../../../img/icons/nasdaq-light.svg');
     }
 
     &--microsoft {
-      background-image: url('../../img/icons/microsoft-lg-light.svg');
+      background-image: url('../../../img/icons/microsoft-lg-light.svg');
     }
   }
 
