file structure & sections update

--- a/src/components/MenuSections/Testimonials/Testimonials.scss
+++ b/src/components/MenuSections/Testimonials/Testimonials.scss
@@ -1,4 +1,5 @@
 .testimonials {
+  position: relative;
   box-sizing: border-box;
   width: 1280px;
   background-color: #d5e0d5;
@@ -108,6 +109,42 @@
       font-size: 26px;
       line-height: 25px;
       letter-spacing: -0.78px;
+    }
+  }
+
+  &__button {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 205px;
+    box-sizing: border-box;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #666b66;
+    background-color: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #f0e8e8;
+    }
+    
+    &--right {
+      left: 1238px;
+    }
+  }
+
+  &__icon {
+    width: 16px;
+    height: 16px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('../../../img/icons/arrow-right-green.svg');
+
+    &--left {
+      transform: rotateY(180deg);
     }
   }
 }
