--- a/src/components/MenuSections/Testimonials/Testimonials.scss
+++ b/src/components/MenuSections/Testimonials/Testimonials.scss
@@ -2,6 +2,7 @@
   position: relative;
   box-sizing: border-box;
   width: 1280px;
+  overflow: hidden;
 
   &__title {
     margin: 0 0 30px;
@@ -15,7 +16,11 @@
   &__banners {
     display: flex;
     gap: 30px;
-    overflow: hidden;
+    transition: transform 500ms;
+
+    &--toLeft {
+      transform: translateX(-42.5%);
+    }
   }
 
   &__banner {
