--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -14,7 +14,7 @@ body {
 
   &__header {
     position: sticky;
-    z-index: 1;
+    z-index: 2;
     left: 0;
     right: 0;
     top: 0;
@@ -68,5 +68,6 @@ body {
 
   &__footer {
     align-self: center;
+    margin: 0 24px 24px;
   }
 }
