--- a/src/components/Bottom/Footer/Footer.scss
+++ b/src/components/Bottom/Footer/Footer.scss
@@ -3,13 +3,13 @@
   width: 95vw;
   max-width: 1750px;
   padding: 96px 0;
-  margin: 0 24px 24px;
   background-color: #001e00;
   border-radius: 8px;
   color: #fff;
 
   &__container {
     padding: 0 64px;
+    height: 520px;
     
     @media (min-width: 1600px) {
       margin: 0 58px;
@@ -23,6 +23,7 @@
   &__columns {
     display: flex;
     gap: 16px;
+    height: 385px;
   }
 
   &__column {
@@ -103,7 +104,7 @@
       height: 40px;
       border: 1px solid #fff;
       border-radius: 50%;
-
+      cursor: pointer;
     }
 
     &--fb {
