--- a/src/components/Top/SearchBar/SearchBar.scss
+++ b/src/components/Top/SearchBar/SearchBar.scss
@@ -123,6 +123,10 @@
       &:hover {
         background-color: #f5f7f5;
       }
+      
+      &--active {
+        background-color: #f5f7f5;
+      }
     }
 
     &-icon {
