--- a/src/components/MenuSections/Testimonials/Testimonials.scss
+++ b/src/components/MenuSections/Testimonials/Testimonials.scss
@@ -127,7 +127,7 @@
     box-sizing: border-box;
     width: 40px;
     height: 40px;
-    border: 2px solid #666b66;
+    border: 2px solid #8d928d;
     background-color: #fff;
     border-radius: 50%;
     cursor: pointer;
