--- a/src/components/Top/Subnav/Subnav.scss
+++ b/src/components/Top/Subnav/Subnav.scss
@@ -14,7 +14,7 @@
   &__item {
     padding: 10px;
     height: 24px;
-    line-height: 20px;
+    line-height: 24px;
     font-weight: 500;
     letter-spacing: 0.4px;
 
@@ -52,9 +52,12 @@
     width: 250px;
     height: 170px;
     padding: 7px 0;
+    margin: 0;
+    list-style: none;
 
     background-color: #fff;
-    box-shadow: rgba(0, 30,0, 0.15) 0 0 10px 2px;
+    border-radius: 6px;
+    box-shadow: rgba(0, 30,0, 0.25) 0 0 10px 2px;
 
     &::before {
       position: absolute;
@@ -65,6 +68,16 @@
       border: 8px solid transparent;
       transform: rotateZ(135deg);
       box-shadow: -2px 2px 3px rgba(57,73,76,.1);;
+    }
+
+    &-item {
+      padding: 6px 15px;
+      line-height: 22px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #f5f7f5;
+      }
     }
   }
 }
