footer links updated

--- a/src/components/Bottom/Footer/Footer.scss
+++ b/src/components/Bottom/Footer/Footer.scss
@@ -150,6 +150,11 @@
 
     &-text {
       line-height: 22px;
+      
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
     }
   }
 }
